# Auth

./: .env.example  README.md  alembic.ini  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/dependencies/: __init__.py  permission.py
app/api/routes/: __init__.py
app/api/routes/v1/: auth.py  health.py  roles.py  users.py
app/core/: __init__.py  security.py
app/db/: __init__.py  session.py
app/db/migrations/: README.md  __init__.py  env.py  script.py.mako
app/db/migrations/versions/: 20241006_0001_initial_schema.py  __init__.py
app/db/models/: __init__.py  role.py  user.py  user_role.py
app/db/repositories/: __init__.py  role_repository.py  user_repository.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  role_entity.py  user_entity.py
app/domain/services/: __init__.py  auth_service.py  permission_service.py  user_service.py
app/domain/value_objects/: __init__.py  email.py
app/events/: __init__.py
app/events/publishers/: __init__.py  permission_events.py
app/events/subscribers/: __init__.py
app/schemas/: __init__.py  auth.py  permission.py  user.py
app/utils/: __init__.py  jwt.py  password.py
app/web/: __init__.py
app/web/routes/: __init__.py  auth.py
docs/: backend_directory_structure.md  project_plan.md
scripts/: generate_openapi.py  init_db.py  prestart.sh
tests/: conftest.py  test_auth_api.py  test_web_routes.py
tests/api/: test_auth_api.py  test_roles_api.py
tests/domain/: test_user_entity.py
tests/e2e/: test_web_flow.py
tests/web/: test_auth_pages.py
(+9 files in other folders)
